using google ORTools for optimization problem